--- a/api/Gemfile
+++ b/api/Gemfile
@@ -5,11 +5,12 @@ ruby '2.7.1'
 
 gem 'bootsnap', '>= 1.4.2', require: false
 gem 'devise', '~> 4.7', '>= 4.7.3'
+gem 'devise-jwt', '~> 0.8.0'
 gem 'figaro', '~> 1.2'
 gem 'pg', '>= 0.18', '< 2.0'
 gem 'rails', '~> 6.0.3', '>= 6.0.3.3'
+gem 'rack-cors', '~> 1.1', '>= 1.1.1'
 gem 'rubocop', require: false
-gem 'simple_token_authentication', '~> 1.17'
 
 group :development, :test do
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
