--- a/api/.gitignore
+++ b/api/.gitignore
@@ -25,8 +25,13 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# RubyMine related
 .idea/
 .generators
+.rakeTasks
+
+# Test coverag
 coverage/
 
 # Ignore application configuration
