--- a/api/Gemfile
+++ b/api/Gemfile
@@ -8,8 +8,8 @@ gem 'devise', '~> 4.7', '>= 4.7.3'
 gem 'devise-jwt', '~> 0.8.0'
 gem 'figaro', '~> 1.2'
 gem 'pg', '>= 0.18', '< 2.0'
-gem 'rails', '~> 6.0.3', '>= 6.0.3.3'
 gem 'rack-cors', '~> 1.1', '>= 1.1.1'
+gem 'rails', '~> 6.0.3', '>= 6.0.3.3'
 gem 'rubocop', require: false
 
 group :development, :test do
@@ -20,6 +20,8 @@ group :development, :test do
 end
 
 group :development do
+  gem 'annotate', '~> 3.1', '>= 3.1.1'
+  gem 'guard-rspec', require: false
   gem 'listen', '~> 3.2'
   gem 'spring'
   gem 'spring-commands-rspec'
