--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/lodash-es": "^4.17.3",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -23,11 +24,13 @@
     "history": "^5.0.0",
     "immer": "^7.0.9",
     "ky": "^0.24.0",
+    "lodash-es": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2",
     "react-icons": "^3.11.0",
     "react-query": "^2.23.1",
+    "react-query-devtools": "^2.6.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-toastify": "^6.0.9",
     "stop-runaway-react-effects": "^2.0.0",
@@ -44,7 +47,11 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
