--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/yup": "^0.29.8",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
@@ -25,8 +25,8 @@
     "immer": "^7.0.9",
     "ky": "^0.24.0",
     "lodash-es": "^4.17.15",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-hook-form": "^6.9.2",
     "react-icons": "^3.11.0",
     "react-query": "^2.23.1",
@@ -47,11 +47,7 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
