--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -1,9 +1,11 @@
 name: web
 
 on:
-  push:
+  pull_request:
     paths:
       - web/**
+    branches:
+      - master
 
 defaults:
   run:
@@ -17,9 +19,17 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12'
+      - uses: netlify/actions/cli@master
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
-      - name: Lint
-        run: yarn lint
       - name: Unit Tests
         run: yarn test
+      - name: Build
+        run: yarn build
+      - name: Deploy Preview
+        uses: netlify/actions/cli@master
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        with:
+          args: deploy --dir=build
