--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Deploy Preview
         uses: netlify/actions/cli@master
         env:
+          REACT_APP_API_URL: https://markerapi.herokuapp.com
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
