Move api url env var to correct run

--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -25,10 +25,11 @@ jobs:
         run: yarn test
       - name: Build
         run: yarn build
+        env:
+          REACT_APP_API_URL: https://markerapi.herokuapp.com
       - name: Deploy Preview
         uses: netlify/actions/cli@master
         env:
-          REACT_APP_API_URL: https://markerapi.herokuapp.com
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
