--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -28,9 +28,18 @@ jobs:
         env:
           REACT_APP_API_URL: https://markerapi.herokuapp.com
       - name: Deploy Preview
+        id: deploy-preview
         uses: netlify/actions/cli@master
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
           args: deploy --dir=web/build
+      - name: Deploy Preview URL
+        uses: unsplash/comment-on-pr@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OUTPUT: "This pull request is being automatically deployed to Netlify. Preview: ${{ steps.deploy-preview.outputs.NETLIFY_URL }}"
+        with:
+          msg: ${{ env.OUTPUT }}
+          check_for_duplicate_msg: false
