Update preview comment

--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -39,7 +39,7 @@ jobs:
         uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OUTPUT: "This pull request is being automatically deployed to Netlify. Preview: ${{ steps.deploy-preview.outputs.NETLIFY_URL }}"
+          OUTPUT: "This pull request has automatically deployed to Netlify. Preview at: ${{ steps.deploy-preview.outputs.NETLIFY_URL }}"
         with:
           msg: ${{ env.OUTPUT }}
           check_for_duplicate_msg: false
