--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -19,6 +19,16 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12'
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restoreKeys: |
+            ${{ runner.os }}-yarn-
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
       - name: Unit Tests
@@ -27,19 +37,19 @@ jobs:
         run: yarn build
         env:
           REACT_APP_API_URL: https://markerapi.herokuapp.com
-      - name: Deploy Preview
-        id: deploy-preview
-        uses: netlify/actions/cli@master
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        with:
-          args: deploy --dir=web/build
-      - name: Deploy Preview URL
-        uses: unsplash/comment-on-pr@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OUTPUT: "This pull request has automatically deployed to Netlify. Preview at: ${{ steps.deploy-preview.outputs.NETLIFY_URL }}"
-        with:
-          msg: ${{ env.OUTPUT }}
-          check_for_duplicate_msg: false
+      # - name: Deploy Preview
+      #   id: deploy-preview
+      #   uses: netlify/actions/cli@master
+      #   env:
+      #     NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      #     NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      #   with:
+      #     args: deploy --dir=web/build
+      # - name: Deploy Preview URL
+      #   uses: unsplash/comment-on-pr@master
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     OUTPUT: "This pull request has automatically deployed to Netlify. Preview at: ${{ steps.deploy-preview.outputs.NETLIFY_URL }}"
+      #   with:
+      #     msg: ${{ env.OUTPUT }}
+      #     check_for_duplicate_msg: false
