--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restoreKeys: |
+          restore-keys: |
             ${{ runner.os }}-yarn-
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
@@ -37,19 +37,19 @@ jobs:
         run: yarn build
         env:
           REACT_APP_API_URL: https://markerapi.herokuapp.com
-      # - name: Deploy Preview
-      #   id: deploy-preview
-      #   uses: netlify/actions/cli@master
-      #   env:
-      #     NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-      #     NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-      #   with:
-      #     args: deploy --dir=web/build
-      # - name: Deploy Preview URL
-      #   uses: unsplash/comment-on-pr@master
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     OUTPUT: "This pull request has automatically deployed to Netlify. Preview at: ${{ steps.deploy-preview.outputs.NETLIFY_URL }}"
-      #   with:
-      #     msg: ${{ env.OUTPUT }}
-      #     check_for_duplicate_msg: false
+      - name: Deploy Preview
+        id: deploy-preview
+        uses: netlify/actions/cli@master
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        with:
+          args: deploy --dir=web/build
+      - name: Deploy Preview URL
+        uses: unsplash/comment-on-pr@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OUTPUT: "This pull request has automatically deployed to Netlify. Preview at: ${{ steps.deploy-preview.outputs.NETLIFY_URL }}"
+        with:
+          msg: ${{ env.OUTPUT }}
+          check_for_duplicate_msg: false
