--- a/.github/workflows/web-test.yml
+++ b/.github/workflows/web-test.yml
@@ -15,29 +15,32 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
           node-version: '12'
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
+
+      - name: Find yarn cache location
         id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Package cache
+        uses: actions/cache@v1
         with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          path: ${{ steps.yarn-cache.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+      - name: Install dependencies
+        run: yarn install --pure-lockfile
       - name: Unit Tests
         run: yarn test
       - name: Build
         run: yarn build
         env:
           REACT_APP_API_URL: https://markerapi.herokuapp.com
-      - name: Deploy Preview
+      - name: Deploy preview
         id: deploy-preview
         uses: netlify/actions/cli@master
         env:
@@ -45,7 +48,7 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
           args: deploy --dir=web/build
-      - name: Deploy Preview URL
+      - name: Comment deploy preview URL
         uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
