--- a/api/Gemfile
+++ b/api/Gemfile
@@ -21,6 +21,8 @@ end
 
 group :development do
   gem 'annotate', '~> 3.1', '>= 3.1.1'
+  gem 'brakeman'
+  gem 'bundler-audit'
   gem 'guard-rspec', require: false
   gem 'listen', '~> 3.2'
   gem 'spring'
