--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -12,34 +12,10 @@ defaults:
     working-directory: api/
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.7
-          bundler-cache: true
-
-      - name: Install gems
-        run: |
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
-
-      - name: Run lint
-        run: bin/rubocop --parallel
-      - name: Run security checks
-        run: |
-          bin/bundler-audit --update
-          bin/brakeman -q -w2
-
-
   test:
-    name: Test
+    name: Lint and Test
     runs-on: ubuntu-latest
+
     services:
       postgres:
         image: postgres:11
@@ -64,12 +40,19 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
 
-      - name: Setup test database
+      - name: Run linting
+        run: bin/rubocop --parallel
+
+      - name: Run security checks
+        run: |
+          bin/bundler-audit --update
+          bin/brakeman -q -w2
+
+      - name: Run tests
         env:
           RAILS_ENV: test
           PGHOST: localhost
           PGUSER: marker
-        run: bin/rails db:setup
-
-      - name: Run tests
-        run: bin/rspec
+        run: |
+          bin/rails db:setup
+          bin/rspec
