--- a/api/Gemfile
+++ b/api/Gemfile
@@ -10,7 +10,6 @@ gem 'figaro', '~> 1.2'
 gem 'pg', '>= 0.18', '< 2.0'
 gem 'rack-cors', '~> 1.1', '>= 1.1.1'
 gem 'rails', '~> 6.0.3', '>= 6.0.3.3'
-gem 'rubocop', require: false
 
 group :development, :test do
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
@@ -25,6 +24,7 @@ group :development do
   gem 'bundler-audit'
   gem 'guard-rspec', require: false
   gem 'listen', '~> 3.2'
+  gem 'rubocop'
   gem 'spring'
   gem 'spring-commands-rspec'
   gem 'spring-watcher-listen', '~> 2.0.0'
