--- a/api/Gemfile
+++ b/api/Gemfile
@@ -20,11 +20,11 @@ end
 
 group :development do
   gem 'annotate', '~> 3.1', '>= 3.1.1'
-  gem 'brakeman'
-  gem 'bundler-audit'
+  gem 'brakeman', require: false
+  gem 'bundler-audit', require: false
   gem 'guard-rspec', require: false
   gem 'listen', '~> 3.2'
-  gem 'rubocop'
+  gem 'rubocop', require: false
   gem 'spring'
   gem 'spring-commands-rspec'
   gem 'spring-watcher-listen', '~> 2.0.0'
