--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -20,10 +20,12 @@ jobs:
       postgres:
         image: postgres:11
         env:
-          POSTGRES_USER: marker
           POSTGRES_DB: marker_test
           POSTGRES_PASSWORD: ""
-        ports: ["5432:5432"]
+        ports:
+          - 5432:5432
+        options: |
+          --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - name: Checkout code
@@ -39,6 +41,9 @@ jobs:
       - name: Install gems
         run: bundle install
 
+      - name: Install required apt packages
+        run: sudo apt-get -y install libpq-dev
+
       - name: Run linting
         run: bundle exec rubocop --parallel
 
@@ -50,8 +55,6 @@ jobs:
       - name: Run tests
         env:
           RAILS_ENV: test
-          PGHOST: localhost
-          PGUSER: marker
         run: |
           bin/rails db:setup
           bin/rspec
