--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -19,6 +19,10 @@ jobs:
     services:
       postgres:
         image: postgres:11
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: ''
+          POSTGRES_DB: marker_test
         ports: ['5432:5432']
         options: >-
           --health-cmd pg_isready
