--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -21,7 +21,7 @@ jobs:
         image: postgres:11
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: ''
+          POSTGRES_PASSWORD: postgres
           POSTGRES_DB: marker_test
         ports: ['5432:5432']
         options: >-
