Add missing env var

--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -61,6 +61,7 @@ jobs:
           PGUSER: postgres
           PGPASSWORD: postgres
           RAILS_ENV: test
+          web_url: marker.test
         run: |
           bin/rails db:setup
           bin/rspec
