Clean up web and add deploy to prod

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -90,7 +90,7 @@ jobs:
           bin/rspec
 
   deploy:
-    name: Deploy
+    name: Deploy to prod
     needs: test
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
